--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   height: 100%;
   background-color: #000; /* fallback */
-  background-image: url('images/bliss-dark.png');
+  background-image: url('images/background.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -31,7 +31,7 @@ html, body {
 body {
   margin: 0;
   background-color: #000;
-  background-image: url('images/bliss-dark.png');
+  background-image: url('images/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
