--- a/style.css
+++ b/style.css
@@ -362,7 +362,11 @@ input[type="submit"]:hover, button:hover {
 }
 body.win95-bg {
   background-color: #0b0b0b;
-  background-image: none;
+  background-image: url('images/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: #e4e4e4;
 }
 .window95{
